<resources>
    <string name="app_name">Athleet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button_text">Login</string>
    <string name="login_btn">Login</string>
    <string name="welcome_message_authed">Hi %1$s! Did you know that %2$s.</string>
    <string name="welcome_back_user">"You are now signed in. Welcome back ${FirebaseAuth.getInstance().currentUser?.displayName}!"</string>
    <string name="user_name">"${FirebaseAuth.getInstance().currentUser?.displayName}"</string>
    <string name="not_signed_in">"Not yet signed in."</string>
    <string name="log_msg_succ">"Successfully signed in user ${FirebaseAuth.getInstance().currentUser?.displayName}!"</string>
    <string name="log_msg_err">""Sign in unsuccessful ${response?.error?.errorCode}"</string>


    <!--Shared Preference Keys -->

    <string name="preference_fact_type_key">fact_type_pref</string>
    <string name="logout_button_text">Logout</string>
    <string name="go_to_my_dashboard">Go to My Dashboard</string>
    <string name="personal">Personal</string>
    <string name="teams">Teams</string>
    <string name="plus_sign">+</string>
    <string name="the_user_s_profile_picture">the user\'s profile picture</string>
    <string name="Workout1_name">Workout 1</string>
    <string name="Workout1_description">The first workout</string>
    <string name="Workout2_name">Workout 2</string>
    <string name="Workout2_description">Workout 3</string>
    <string name="done_button_text">Create</string>
    <string name="workout_description_edit_text">Add a description of the workout here</string>
    <string name="team_description_edit_text">Add a description of the team here</string>
    <string name="workout_name_edit_text">Enter name for workout</string>
    <string name="team_name_edit_text">Enter name for team</string>
    <string name="add_workout">Add Workout</string>
    <string name="add_team">Add Team</string>
    <string name="workout_string" />
    <string name="fab_content_description">floating action button</string>
    <string name="search">Search</string>
    <string name="team_name">TeamName</string>
    <string name="team_desc">description</string>
    <string name="teammates">Team Members</string>
    <string name="team_dash">Cards of Team Dashboard stuff</string>
    <string name="delete_team">Delete Team</string>
    <string name="leave_team">Leave Team</string>
    <string name="team_admin">Team Admin</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="user">Username</string>
    <string name="headline">Headline</string>
    <string name="e_mail">E-mail</string>
    <string name="make_admin">Make Admin</string>
    <string name="username">Enter User Name</string>
    <string name="team_chat_room">Team Chat</string>
    <string name="message_output"></string>
    <string name="send_message">Send</string>
    <string name="send_message_button">Send</string>
    <string name="blocked_users_textview_header">Blocked Users:</string>
    <string name="user_name_edit_text">Username to message</string>
    <string name="add_chat">Add Chat</string>
    <string name="moderate_team">Moderate Team</string>
</resources>