<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.UserProfilePageActivity">

    <TextView
        android:id="@+id/labelUserName"
        android:layout_width="107dp"
        android:layout_height="27dp"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/andada"
        android:text="@string/user"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/andada"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelHeadline"
        android:layout_width="90dp"
        android:layout_height="28dp"
        android:layout_gravity="start"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/andada"
        android:text="@string/headline"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userHeadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/andada"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="87dp"
        android:layout_height="29dp"
        android:layout_gravity="start"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/andada"
        android:text="@string/e_mail"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userHeadline"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:fontFamily="@font/andada"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEmail"
        app:layout_constraintVertical_bias="0.03" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_blockedUsers"
        android:layout_width="372dp"
        android:layout_height="282dp"
        android:clickable="true"
        android:focusable="true"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmail"
        app:layout_constraintVertical_bias="0.709"
        tools:listitem="@layout/blocked_user_list_item" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/blocked_users_textview_header"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_blockedUsers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>